Fixed some scrollbar and overflow design

--- a/src/assets/style/colors.scss
+++ b/src/assets/style/colors.scss
@@ -1,4 +1,5 @@
-$color-dark-grey: #989898;
-$color-medium-grey: #dcdcdc;
+$color-darker-grey: #989898;
+$color-dark-grey: #a9a9a9;
+$color-medium-grey: #d3d3d3;
 $color-light-grey: #e8e8e8;
 $color-lighter-grey: #f8f8f8;
