--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   word-break: break-word;
   -webkit-tap-highlight-color: transparent;
+  user-select: none;
 }
 
 ul {
@@ -16,4 +17,18 @@ body {
   padding: 0;
   overflow-x: hidden;
   font-family: 'Plak', serif;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #a9a9a9;
+  border-radius: 100px;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+  border-radius: 100px;
 }
